--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-*.jpg filter=lfs diff=lfs merge=lfs -text
-*.pkl filter=lfs diff=lfs merge=lfs -text
+similarity.pkl filter=lfs diff=lfs merge=lfs -text
